Bottom/app/src/main/java/com/example/user/bottom/SignupActivity.java
package com.example.user.bottom;

import android.app.Activity;
import android.content.Intent;
import android.os.Bundle;
import android.support.v7.app.AppCompatActivity;
import android.util.Log;
import android.view.View;
import android.view.Window;
import android.view.WindowManager;
import android.view.animation.Animation;
import android.view.animation.AnimationUtils;
import android.widget.Button;
import android.widget.EditText;
import android.widget.ImageView;
import android.widget.TextView;

import com.android.volley.Request;
import com.android.volley.RequestQueue;
import com.android.volley.Response;
import com.android.volley.VolleyError;
import com.android.volley.toolbox.StringRequest;
import com.android.volley.toolbox.Volley;

import java.util.HashMap;
import java.util.Map;

public class SignupActivity extends AppCompatActivity {

    private Button mLoginText;

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);

        //Remove title bar
        this.requestWindowFeature(Window.FEATURE_NO_TITLE);

        //Remove notification bar
        this.getWindow().setFlags(WindowManager.LayoutParams.FLAG_FULLSCREEN, WindowManager.LayoutParams.FLAG_FULLSCREEN);

        setContentView(R.layout.activity_signup);

        mLoginText= (Button) findViewById(R.id.signup_button);

        mLoginText.setOnClickListener(new View.OnClickListener(){
            public void onClick(View v){
                EditText email, password;
                email = findViewById(R.id.email_login);
                password = findViewById(R.id.pass_login);
                final String email_post = email.getText().toString();
                final String pass_post = password.getText().toString();
                String url = "https://restaurant.mybiller.io/gef/user/register";
                String response;
                RequestQueue queue = Volley.newRequestQueue(getApplicationContext());  // this = context
                StringRequest postRequest = new StringRequest(Request.Method.POST, url,
                        new Response.Listener<String>()
                        {
                            @Override
                            public void onResponse(String response) {
                                // response
                                Log.d("Response", response);
                                Intent intent = new Intent(getApplicationContext(), LoginActivity.class);
                                startActivity(intent);
                            }
                        },
                        new Response.ErrorListener()
                        {
                            @Override
                            public void onErrorResponse(VolleyError error) {
                                // error
                                Log.d("Error.Response", ""+error);
                            }
                        }
                ) {
                    @Override
                    protected Map<String, String> getParams()
                    {
                        Map<String, String>  params = new HashMap<String, String>();
                        params.put("email", email_post);
                        params.put("password", pass_post);
                        params.put("name", pass_post);
                        params.put("phone_number", pass_post);

                        return params;
                    }
                };
                queue.add(postRequest);

            }
        });

    }


}
